--- a/euphonia/web/css/app.css
+++ b/euphonia/web/css/app.css
@@ -95,3 +95,9 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     #ticketFrame  { zoom: 1;}
 }
+
+#img_profile {
+    width: 50px;
+    height:50px;
+    border-radius:10px
+}
