Make euphonia UI a little more user friendly
Make euphonia UI a little more user friendly

--- a/euphonia/web/css/app.css
+++ b/euphonia/web/css/app.css
@@ -78,11 +78,6 @@
 }
 
 #ticketFrame {
-    width: 1000px;
-    height:2000px;
-}
-
-#ticketFrame {
     zoom: 1.0;
     -moz-transform: scale(0.75);
     -moz-transform-origin: 0 0;
@@ -90,6 +85,8 @@
     -o-transform-origin: 0 0;
     -webkit-transform: scale(0.75);
     -webkit-transform-origin: 0 0;
+    width: 133.5%;
+    height: 133.5%;
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
@@ -104,4 +101,9 @@
 
 .active {
     font-weight: bold;
+}
+
+@font-face {
+    font-family: ninjanaruto;
+    src: url("/css/njnaruto.ttf");
 }
