Support for querying either raw underlying metrics or values as displayed
? shows values as displayed (e.g. shows rates)
! shows raw underlying metrics (e.g. shows cumulative counts)

--- a/timeseries/timeseries.src/html.css
+++ b/timeseries/timeseries.src/html.css
@@ -28,3 +28,8 @@ body, table, frameset, pre.info {
 .selected {
     background: rgb(240,245,255)
 }
+
+.info-data {
+    padding-right: 1em;
+    text-align: right;
+}
